# rust-priority-inheriting-lock

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
.github/workflows/: rust.yml
src/: lib.rs
supply-chain/: audits.toml  config.toml
tests/: tests.rs
