[package]
name = "priority-inheriting-lock"
version = "1.0.0"
edition = "2021"
rust-version = "1.69.0"
authors = ["Ryan Zoeller <rtzoeller@rtzoeller.com>"]
description = "A priority-inheriting lock based on Linux futexes"
repository = "https://github.com/rtzoeller/rust-priority-inheriting-lock/"
categories = ["concurrency", "os::linux-apis"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
linux-futex = "1.0.0"
lock_api = "0.4.12"

[dev-dependencies]
nix = { version = "0.29.0", default-features = false, features = ["user"] }
procfs = { version = "0.16.0", default-features = false }

[[test]]
name = "tests"
path = "tests/tests.rs"
